--- a/moduloE/estilo.css
+++ b/moduloE/estilo.css
@@ -1,18 +1,18 @@
 body{
-    background: rgb(155, 150, 226);
+    background: #81d8d0;
     font: normal 15px Arial ;
 }
 header{
-    color: white;
+    color: #191970;
     text-align: center;
 }
 section{
-    background: white;
+    background: #e0ffff;
     border-radius: 10px;
     padding: 15px;
     width: 500px;
     margin: auto;
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 5px 5px 10px #483d8b;
 }
 div{
     font-size: large;
